Fix Testimonial header spacing

--- a/components/Testimonials/Testimonials.module.css
+++ b/components/Testimonials/Testimonials.module.css
@@ -14,7 +14,7 @@
 
 .testimonialsHeader {
     text-align: center;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
@@ -232,7 +232,7 @@
     }
 
     .testimonialsHeader {
-        margin-bottom: 60px;
+        margin-bottom: 40px;
     }
 
     .testimonialsHeadline {
